# surqo

./: .env.example  .gitignore  README.md  deploy-fly.sh
.claude/: launch.json
.github/workflows/: ci-cd.yml
backend/: .env.example  Dockerfile  fly.toml  publish_live.py  pyproject.toml  render.yaml  test_analyze.py  test_llm_direct.py  test_mqtt_flow.py  test_ollama.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  alert.py  analysis.py  chat_message.py  farm.py  sensor_reading.py  user.py
backend/app/prompts/: alert_triage_v1.0.yaml  daily_summary_v1.0.yaml  farm_analysis_v1.0.yaml
backend/app/routers/: alerts.py  analysis.py  farms.py  kpis.py  sensors.py  users.py
backend/app/schemas/: __init__.py  alert.py  analysis.py  farm.py  sensor.py  user.py
backend/app/services/: alert_service.py  cache_service.py  climate_service.py  kpi_service.py  llm_service.py  mqtt_service.py
backend/app/websocket/: manager.py
backend/migrations/: 001_initial_schema.sql  002_analysis_quota.sql  data_retention.sql  enable_rls.sql
backend/tests/: conftest.py  test_alert_service.py  test_api_alerts.py  test_api_farms.py  test_api_sensors.py  test_api_users.py  test_climate_service.py  test_kpi_service.py  test_llm_service.py
docs/: SURQO_DOCUMENTACION_COMPLETA.md  Surqo_Tutorial_Tecnico_Completo.docx  architecture.md  esp32-wiring-guide.md  generate_tutorial.js  package-lock.json  package.json  ~$rqo_Tutorial_Tecnico_Completo.docx
firmware/: README.md  platformio.ini
firmware/surqo_node/: config.h  surqo_node.ino
frontend/: .env.production  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/alerts/: page.tsx
frontend/src/app/analyze/: page.tsx
frontend/src/app/como-funciona/: PasosScroll.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/farms/: page.tsx
frontend/src/components/: AlertBadge.tsx  AnalysisChat.tsx  AnalysisResult.tsx  AppSidebar.tsx  AuthProvider.tsx  ColombiaLocationSelector.tsx  FarmMapSelector.tsx  Footer.tsx  KPICard.tsx  LiveFeed.tsx  NavBar.tsx  PointMapSelector.tsx  RequireAuth.tsx  SensorChart.tsx  SurqoIcon.tsx  ThemeProvider.tsx  ThemeToggle.tsx  WeatherBanner.tsx
frontend/src/lib/: api.ts  auth.ts  supabase.ts  utils.ts  websocket.ts
frontend/src/types/: index.ts
iot-simulator/: README.md  simulator.py
(+24 files in other folders)
