[project]
name = "surqo-backend"
version = "1.0.0"
description = "Surqo — Del surco al insight. Backend API."
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "slowapi>=0.1.9",
    "anthropic>=0.26.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.14.2",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "resend>=2.0.0",
    "paho-mqtt>=2.0.0",
    "python-dotenv>=1.0.0",
    "logfire[fastapi]>=0.50.0",
    "pyyaml>=6.0.0",
    "websockets>=12.0",
    "pyjwt[cryptography]>=2.8.0",
    "cryptography>=48.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008", "B904"]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]
